# rust_cli_music_player

./: Cargo.toml  example-playlist.json  info.json  test.html  youtube-api.json
src/: main.rs
src/cli/: add.rs  create.rs  data.rs  delete.rs  mod.rs  play.rs  rename.rs  search.rs  settings.rs
src/util/: colored.rs  mod.rs  settings.rs  youtube_api.rs  yt_downloader.rs
