[package]
name = "rust_cli_music_player"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.2"
anyhow = "1.0.57"
log = "0.4.17"
fern = "0.6.1"
colored = "2.0.0"
basic_quick_lib = "0.3.0"
serde_json = "1.0.81"
chrono = "0.4.19"
clearscreen = "1.0.9"
once_cell = "1.11.0"
rand = "0.8.5"
thiserror = "1.0.31"
parking_lot = "0.12.0"

	[dependencies.clap]
	version = "3.1.18"
	features = ["derive"]

	[dependencies.serde]
	version = "1.0.137"
	features = ["derive"]