[package]
name = "rust_cli_music_player"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.2"
anyhow = "1.0.57"
basic_quick_lib = "0.3.0"
serde_json = "1.0.81"
chrono = "0.4.19"
clearscreen = "2.0.0"
once_cell = "1.11.0"
rand = "0.8.5"
thiserror = "1.0.31"
parking_lot = "0.12.0"
termcolor = "1.1.3"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
regex = "1.6.0"

	[dependencies.clap]
	version = "4.0.22"
	features = ["derive"]

	[dependencies.serde]
	version = "1.0.137"
	features = ["derive"]
